[gd_scene load_steps=53 format=2]

[ext_resource path="res://src/sprites/animations/enemies/boss/Boss_jesus.png" type="Texture" id=1]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0019.png" type="Texture" id=2]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0013.png" type="Texture" id=3]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0024.png" type="Texture" id=4]
[ext_resource path="res://src/sprites/animations/enemies/boss/Boss_eyes_closed.png" type="Texture" id=5]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0004.png" type="Texture" id=6]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0012.png" type="Texture" id=7]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0020.png" type="Texture" id=8]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0022.png" type="Texture" id=9]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0030.png" type="Texture" id=10]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0031.png" type="Texture" id=11]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0032.png" type="Texture" id=12]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0021.png" type="Texture" id=13]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0036.png" type="Texture" id=14]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0009.png" type="Texture" id=15]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0014.png" type="Texture" id=16]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0007.png" type="Texture" id=17]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0010.png" type="Texture" id=18]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0011.png" type="Texture" id=19]
[ext_resource path="res://src/sprites/animations/enemies/boss/Boss.png" type="Texture" id=20]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0017.png" type="Texture" id=21]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0016.png" type="Texture" id=22]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0018.png" type="Texture" id=23]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0008.png" type="Texture" id=24]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0025.png" type="Texture" id=25]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0028.png" type="Texture" id=26]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0029.png" type="Texture" id=27]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0002.png" type="Texture" id=28]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0006.png" type="Texture" id=29]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0026.png" type="Texture" id=30]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0005.png" type="Texture" id=31]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0001.png" type="Texture" id=32]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0003.png" type="Texture" id=33]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0015.png" type="Texture" id=34]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0033.png" type="Texture" id=35]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0034.png" type="Texture" id=36]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0023.png" type="Texture" id=37]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0035.png" type="Texture" id=38]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0027.png" type="Texture" id=39]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0037.png" type="Texture" id=40]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0038.png" type="Texture" id=41]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0042.png" type="Texture" id=42]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0041.png" type="Texture" id=43]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0039.png" type="Texture" id=44]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0040.png" type="Texture" id=45]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0047.png" type="Texture" id=46]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0043.png" type="Texture" id=47]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0048.png" type="Texture" id=48]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0045.png" type="Texture" id=49]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0044.png" type="Texture" id=50]
[ext_resource path="res://src/sprites/animations/enemies/boss/eyes/BossEyes_0046.png" type="Texture" id=51]
[ext_resource path="res://src/characters/Boss.gd" type="Script" id=52]

[node name="Boss" type="Node2D"]
position = Vector2( 518, 315 )
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 52 )

[node name="Boss" type="Sprite" parent="."]
texture = ExtResource( 20 )

[node name="BossJesus" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="BossEyesClosed" type="Sprite" parent="."]
position = Vector2( 0, -22 )
texture = ExtResource( 5 )

[node name="eyes" type="Node2D" parent="."]

[node name="BossEyes0001" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 32 )

[node name="BossEyes0002" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 28 )

[node name="BossEyes0003" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 33 )

[node name="BossEyes0004" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 6 )

[node name="BossEyes0005" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 31 )

[node name="BossEyes0006" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 29 )

[node name="BossEyes0007" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 17 )

[node name="BossEyes0008" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 24 )

[node name="BossEyes0009" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 15 )

[node name="BossEyes0010" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 18 )

[node name="BossEyes0011" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 19 )

[node name="BossEyes0012" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 7 )

[node name="BossEyes0013" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 3 )

[node name="BossEyes0014" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 16 )

[node name="BossEyes0015" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 34 )

[node name="BossEyes0016" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 22 )

[node name="BossEyes0017" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 21 )

[node name="BossEyes0018" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 23 )

[node name="BossEyes0019" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 2 )

[node name="BossEyes0020" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 8 )

[node name="BossEyes0021" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 13 )

[node name="BossEyes0022" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 9 )

[node name="BossEyes0023" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 37 )

[node name="BossEyes0024" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 4 )

[node name="BossEyes0025" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 25 )

[node name="BossEyes0026" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 30 )

[node name="BossEyes0027" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 39 )

[node name="BossEyes0028" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 26 )

[node name="BossEyes0029" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 27 )

[node name="BossEyes0030" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 10 )

[node name="BossEyes0031" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 11 )

[node name="BossEyes0032" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 12 )

[node name="BossEyes0033" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 35 )

[node name="BossEyes0034" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 36 )

[node name="BossEyes0035" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 38 )

[node name="BossEyes0036" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 14 )

[node name="BossEyes0037" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 40 )

[node name="BossEyes0038" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 41 )

[node name="BossEyes0039" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 44 )

[node name="BossEyes0040" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 45 )

[node name="BossEyes0041" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 43 )

[node name="BossEyes0042" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 42 )

[node name="BossEyes0043" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 47 )

[node name="BossEyes0044" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 50 )

[node name="BossEyes0045" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 49 )

[node name="BossEyes0046" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 51 )

[node name="BossEyes0047" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 46 )

[node name="BossEyes0048" type="Sprite" parent="eyes"]
position = Vector2( 0, -22 )
texture = ExtResource( 48 )

[node name="EyesTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="CloseEyeTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="EyesTimer" to="." method="_on_EyesTimer_timeout"]
[connection signal="timeout" from="CloseEyeTimer" to="." method="_on_CloseEyeTimer_timeout"]
